feat: Documentando criação do User
